add ability to hardcode VST port

--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -36,8 +36,7 @@
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-md-3 col-form-label" for="serialPort">Serial Port (blank if no hardware
-					Synergy)</label>
+				<label class="col-md-3 col-form-label" for="serialPort">Serial Port</label>
 				<!-- HACK: want a file dialog on Mac; a straight text box on
 	  * windows -  make a straight text box and add the onclick
 	  * via javascript at initialization.
@@ -60,9 +59,21 @@
 				</div>
 			</div>
 			<div class="form-group row">
+				<label class="col-md-3 col-form-label" for="useVst">Enable VST Support</label>
+				<div class="col-md-7">
+					<input type="checkbox" class="form-control" id="useVst" onclick="prefs.toggleVst();" value="true" />
+				</div>
+			</div>
+			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="vstAutoConfig">Zeroconf VST</label>
 				<div class="col-md-7">
-					<input type="checkbox" class="form-control" id="vstAutoConfig" value="true" />
+					<input type="checkbox" class="form-control" id="vstAutoConfig" onclick="prefs.toggleVst();" value="true" />
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-3 col-form-label" for="vstPort">VST Port</label>
+				<div class="col-md-7">
+					<input type="integer" class="form-control" id="vstPort" />
 				</div>
 			</div>
 
