--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -279,6 +279,14 @@
 			</select>
 		</div>
 
+		<div id="timeScaleDiv" style="display:inline-block;">
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time Scale:&nbsp;
+			<select id="timeScale" onchange="viewVCE_envs.changeTimeScale(this.options[this.selectedIndex].value)">
+				<option value="logarithmic">Log</option>
+				<option value="linear">Linear</option>
+			</select>
+		</div>
+
 		<canvas id="envChart" height="400" width="600" style="border:solid #666;"></canvas>
 
 		<table id="envTable" class="valTable">
