--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -15,6 +15,7 @@
 	<script src="static/js/popper.min.js"></script>
 	<script src="static/js/bootstrap.min.js"></script>
 	<script src="static/js/Chart.bundle.min.js"></script>
+	<script src="static/js/chartjs-plugin-dragdata.min.js"></script>
 
 	<script src="static/js/lodash-4.17.15.js"></script>
 
