filters,keyeq,keyprop now interactive via mouse

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -21,6 +21,7 @@
 
 	<script src="static/js/index.js"></script>
 	<script src="static/js/debug.js"></script>
+	<script src="static/js/viewVCE_chartdrag.js"></script>
 	<script src="static/js/viewVCE.js"></script>
 	<script src="static/js/viewVCE_voice.js"></script>
 	<script src="static/js/viewVCE_envs.js"></script>
