make freq scale linear by default - update releasenotes

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -282,13 +282,13 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time Scale:&nbsp;
 			<select id="freqScale" onchange="viewVCE_envs.changeFreqScale(this.options[this.selectedIndex].value)">
 				<option value="logarithmic">Log</option>
-				<option value="linear">Linear</option>
+				<option value="linear" selected>Linear</option>
 			</select>
 		</div>
 		<div id="timeScaleDiv" style="display:inline-block;">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time Scale:&nbsp;
 			<select id="timeScale" onchange="viewVCE_envs.changeTimeScale(this.options[this.selectedIndex].value)">
-				<option value="logarithmic">Log</option>
+				<option value="logarithmic" selected>Log</option>
 				<option value="linear">Linear</option>
 			</select>
 		</div>
