make freq scale linear by default - update releasenotes

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -279,7 +279,7 @@
 			</select>
 		</div>
 		<div id="freqScaleDiv" style="display:inline-block;">
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time Scale:&nbsp;
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Freq Scale:&nbsp;
 			<select id="freqScale" onchange="viewVCE_envs.changeFreqScale(this.options[this.selectedIndex].value)">
 				<option value="logarithmic">Log</option>
 				<option value="linear" selected>Linear</option>
