add ability to disable serial flow control

--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -58,6 +58,12 @@
 					</select>
 				</div>
 			</div>
+			<div class="form-group row">
+				<label class="col-md-3 col-form-label" for="flowControl">Serial Port RTS/CTS flow control</label>
+				<div class="col-md-7">
+					<input type="checkbox" class="form-control" id="flowControl"  value="true" />
+				</div>
+			</div>
 
 			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="useOsc">Enable OSC Control Surface</label>
