--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -60,7 +60,7 @@
 				<tr>
 					<th></th>
 					<th>Freq</th>
-					<th>Addr</th>
+					<th>Add</th>
 					<th>Out</th>
 					<th></th>
 					<th></th>
