env gain change poc

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1326,6 +1326,21 @@
 					</td>
 
 				</tr>
+				<tr class="gain">
+					<td colspan="8">
+					</td>
+					<td colspan="8">
+						<div style="margin-top: 5px;" class="AmpGain">
+							Gain Low:&nbsp;&nbsp;
+	                                                <input id="gainAmpLowMinus" type='button' value='-' onclick=' viewVCE_envs.onchangeGain(this)' />
+	                                                <input id="gainAmpLowPlus" type='button' value='+' onclick=' viewVCE_envs.onchangeGain(this)' />
+							&nbsp;Up:&nbsp;&nbsp;
+	                                                <input id="gainAmpUpMinus" type='button' value='-' onclick=' viewVCE_envs.onchangeGain(this)' />
+	                                                <input id="gainAmpUpPlus" type='button' value='+' onclick=' viewVCE_envs.onchangeGain(this)' />
+						</div>
+					</td>
+
+				</tr>
 				<tr class="listplusminus">
 					<td colspan="8">
 						<div style="margin-top: 5px; float: left;">
