initial filter gain

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1661,6 +1661,18 @@
 							max="63" onchange="viewVCE_filters.onchange(this,true)" disabled />
 					</td>
 				</tr>
+				<tr class="gain">
+					<td colspan="6">
+					</td>
+					<td colspan="6">
+						<div style="margin-top: 5px;" class="FilterGain">
+							Gain:&nbsp;&nbsp;
+	                                                <input id="gainFilterMinus" type='button' value='-' onclick=' viewVCE_filters.onchangeGain(this)' />
+	                                                <input id="gainFilterPlus" type='button' value='+' onclick=' viewVCE_filters.onchangeGain(this)' />
+						</div>
+					</td>
+
+				</tr>
 
 			</tbody>
 		</table>
