disable the filter gain feature

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1661,7 +1661,7 @@
 							max="63" onchange="viewVCE_filters.onchange(this,true)" disabled />
 					</td>
 				</tr>
-				<tr class="gain">
+				<!--tr class="gain">
 					<td colspan="6">
 					</td>
 					<td colspan="6">
@@ -1672,7 +1672,7 @@
 						</div>
 					</td>
 
-				</tr>
+				</tr-->
 
 			</tbody>
 		</table>
