selectable env gain percentage

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1337,6 +1337,12 @@
 							&nbsp;Up:&nbsp;&nbsp;
 	                                                <input id="gainAmpUpMinus" type='button' value='-' onclick=' viewVCE_envs.onchangeGain(this)' />
 	                                                <input id="gainAmpUpPlus" type='button' value='+' onclick=' viewVCE_envs.onchangeGain(this)' />
+							<select class="vceEdit" id="gainPercentage">
+									<option value="1">1%-&gt;</option>
+									<option value="5">5%-&gt;</option>
+									<option value="10" selected>10%-&gt;</option>
+									<option value="20">20%-&gt;</option>
+							</select>
 						</div>
 					</td>
 
