--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -50,6 +50,7 @@
 			<thead>
 				<tr>
 					<th>Osc</th>
+					<th>Gain</th>
 					<th colspan=3 style="text-align:center;">Patch</th>
 					<th>Hrm#</th>
 					<th>Detune</th>
@@ -58,6 +59,7 @@
 					<th>Filters</th>
 				</tr>
 				<tr>
+					<th></th>
 					<th></th>
 					<th>Freq</th>
 					<th>Add</th>
@@ -72,6 +74,7 @@
 			<tbody id="patchTbody">
 				<tr>
 					<td>1&lt;</td>
+					<td>100</td>
 					<td></td>
 					<td></td>
 					<td>2</td>
@@ -83,6 +86,7 @@
 				</tr>
 				<tr>
 					<td>2</td>
+					<td>100</td>
 					<td>2</td>
 					<td></td>
 					<td>2</td>
@@ -1332,17 +1336,15 @@
 					<td colspan="8">
 						<div style="margin-top: 5px;" class="AmpGain">
 							Gain Low:&nbsp;&nbsp;
-	                                                <input id="gainAmpLowMinus" type='button' value='-' onclick=' viewVCE_envs.onchangeGain(this)' />
-	                                                <input id="gainAmpLowPlus" type='button' value='+' onclick=' viewVCE_envs.onchangeGain(this)' />
+								<div class="spinwrapper"><input id="gainAmpLow" type='text' min=0
+																max=100 class="vceEdit vceNum spinPLAIN"
+																onchange='viewVCE_envs.onchangeGain(this)' />
+								</div>
 							&nbsp;Up:&nbsp;&nbsp;
-	                                                <input id="gainAmpUpMinus" type='button' value='-' onclick=' viewVCE_envs.onchangeGain(this)' />
-	                                                <input id="gainAmpUpPlus" type='button' value='+' onclick=' viewVCE_envs.onchangeGain(this)' />
-							<select class="vceEdit" id="gainPercentage">
-									<option value="1">1%-&gt;</option>
-									<option value="5">5%-&gt;</option>
-									<option value="10" selected>10%-&gt;</option>
-									<option value="20">20%-&gt;</option>
-							</select>
+							<div class="spinwrapper"><input id="gainAmpUp" type='text' min=0
+															max=100 class="vceEdit vceNum spinPLAIN"
+															onchange='viewVCE_envs.onchangeGain(this)' />
+							</div>
 						</div>
 					</td>
 
