--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -27,16 +27,7 @@
 					Patch Type:&nbsp;
 					<select class="vceEdit" id="patchType" onchange="viewVCE_voice.changePatchType(this.value)"
 						disabled>
-						<option value="0">1 + 2 + 3 + 4 + 5 + 6 + 7 + 8</option>
-						<option value="1">(1~2) + (3~4) + (5~6) + (7~8)</option>
-						<option value="2">((1+2+3)~4) + ((5+6+7)~8)</option>
-						<option value="3">(1~2+3)~4) + ((5~6+7)~8)</option>
-						<option value="4">(1~2) + 3 + 4 + (5~6) + 7 + 8</option>
-						<option value="5">((1+2)~3) + ((1+2)~4) + ((5+6)~7) + ((5+6)~8)</option>
-						<option value="6">(1~2) + (1~3) + (1~4) + (1~5) + (1~6) + (1~7) + (1~8)</option>
-						<option value="7">(1~2~3) + (1~2~4) + (1~2~5) + (1~2~6) + (1~2~7) + (1~2~8)</option>
-						<option value="8">(1~2~3~4) + (1~2~3~5) + (1~2~3~6) + (1~2~3~7) + (1~2~3~8)</option>
-						<option value="9">((1~2+3)~4) + ((1~2+3)~5) + ((1~2+3)~6) + ((1~2+3)~7) + ((1~2+3)~8)</option>
+						<!-- options filled in at runtime -->
 					</select>
 				</td>
 				<td>
