read only display of DOC/TXT files

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -11,6 +11,7 @@
 	<li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceFiltersTab">Filters</a></li>
 	<li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceKeyEqTab">Key Eq</a></li>
 	<li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceKeyPropTab">Key Prop</a></li>
+	<li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceDocTab">Doc</a></li>
 </ul>
 
 <div class="tab-content">
@@ -2126,4 +2127,7 @@
 
 	</div>
 
+	<div id="vceDocTab" class="tab-pane fade ">
+		<div id="doctext" class="doctext"></div>
+	</div>
 </div>
