--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -31,6 +31,7 @@
 	<script src="static/js/viewVCE_filters.js"></script>
 	<script src="static/js/viewVCE_keyeq.js"></script>
 	<script src="static/js/viewVCE_keyprop.js"></script>
+	<script src="static/js/viewVCE_doc.js"></script>
 	<script src="static/js/viewCRT.js"></script>
 
 	<script>
