--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -247,9 +247,10 @@ TEST a "more button" design:
 						<span id="logOutput"></span>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal"
+						<button type="button" class="btn btn-secondary"
 								id="subprocessCancelButton">Cancel</button>
-						<button type="button" class="btn btn-primary" disabled data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal"
+								id="subprocessCloseButton" disabled>Close</button>
 					</div>
 				</div>
 			</div>
