--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -259,7 +259,7 @@ TEST a "more button" design:
 				</div>
 			</div>
 		</div>
-		<!-- Modal -->
+		<!-- Modal: copied to tuning.html -->
 		<div class="modal fade" id="alertModal" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
