--- a/resources/app/tuning.html
+++ b/resources/app/tuning.html
@@ -20,6 +20,25 @@
 <body>
 
 	<div class="container aboutbox">
+		<!-- Modal : copied from index.html-->
+		<div class="modal fade" id="alertModal" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="alertTitle">Alert Title</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<span id="alertText"></span>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
 		<form>
 			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="useStandard">Use Standard Tuning (Even Temperament, 12 Note scale, A440)</label>
@@ -31,7 +50,7 @@
 				<label class="col-md-3 col-form-label" for="sclPath">Scala Scale file (SCM)</label>
 				<div class="col-md-7">
 					<input type="string" class="form-control" id="sclPath"
-						   onclick="tunings.sclFileDialog(this,this.value);" />
+						   onclick="tuning.sclFileDialog(this,this.value);" />
 				</div>
 			</div>
 			<div class="form-group row">
@@ -44,7 +63,7 @@
 				<label class="col-md-3 col-form-label" for="kbmPath">Scala Keyboard Mapping file (KBM)</label>
 				<div class="col-md-7">
 					<input type="string" class="form-control" id="kbmPath"
-						   onclick="tunings.kbmFileDialog(this,this.value);" />
+						   onclick="tuning.kbmFileDialog(this,this.value);" />
 				</div>
 			</div>
 			<div class="form-group row">
@@ -63,7 +82,7 @@
 			<div class="col-md-7 offset-md-3">
 				<button type="cancel" onclick="tuning.cancelAndClose();">Cancel</button>
 				<button type="button" onclick="tuning.showFrequencyTable();">Show Frequencies</button>
-				<button type="submit" class="btn btn-primary" onclick="tuning.saveAndClose();">Send To Synergy</button>
+				<button type="button" class="btn btn-primary" onclick="tuning.sendToSynergy();">Send To Synergy</button>
 			</div>
 		</form>
 
