alternate tuning docs

--- a/resources/app/tuning.html
+++ b/resources/app/tuning.html
@@ -41,7 +41,7 @@
 		</div>
 		<form>
 			<div class="form-group row">
-				<label class="col-md-3 col-form-label" for="useStandard">Use Standard Tuning (Even Temperament, 12 Note scale, A440)</label>
+				<label class="col-md-3 col-form-label" for="useStandard">Use Standard Tuning (Even Temperament, 12 Note scale)</label>
 				<div class="col-md-7">
 					<input type="checkbox" class="form-control" id="useStandard" onclick="tuning.toggle();" value="true" />
 				</div>
