--- a/resources/app/tuning.html
+++ b/resources/app/tuning.html
@@ -67,6 +67,12 @@
 				</div>
 			</div>
 			<div class="form-group row">
+				<label class="col-md-3 col-form-label" for="middleNote">Middle Note (first note of the scale - MIDI value)</label>
+				<div class="col-md-7">
+					<input type="integer" class="form-control" id="middleNote" />
+				</div>
+			</div>
+			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="referenceNote">Reference Note (MIDI value)</label>
 				<div class="col-md-7">
 					<input type="integer" class="form-control" id="referenceNote" />
