--- a/resources/app/tuning.html
+++ b/resources/app/tuning.html
@@ -69,19 +69,19 @@
 			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="middleNote">Middle Note (first note of the scale - MIDI value)</label>
 				<div class="col-md-7">
-					<input type="integer" class="form-control" id="middleNote" />
+					<input type="number" min="0" max="127" class="form-control" id="middleNote" />
 				</div>
 			</div>
 			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="referenceNote">Reference Note (MIDI value)</label>
 				<div class="col-md-7">
-					<input type="integer" class="form-control" id="referenceNote" />
+					<input type="number" min="0" max="127" class="form-control" id="referenceNote" />
 				</div>
 			</div>
 			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="referenceFreq">Reference Frequency (Hz)</label>
 				<div class="col-md-7">
-					<input type="integer" class="form-control" id="referenceFreq" />
+					<input type="number" pattern="\d+(.\d*)?" min="1.0" max="20000.0" class="form-control" id="referenceFreq" />
 				</div>
 			</div>
 
