cleanup tuning table display

--- a/resources/app/tuning.html
+++ b/resources/app/tuning.html
@@ -93,7 +93,7 @@
 			</div>
 		</form>
 
-		<table>
+		<table id="tuningTable">
 			<tr>
 				<td style="margin:100px; vertical-align:top; border: 3px groove #666;"><div id="scaleTableDiv"></div></td>
 				<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
